fix: remove route-order (#69)
fix(bautajs-core): add promise tests on decorators
fix(bautajs-core): add list of decorators
fix(bautajs-express): fix path ordering
fix(bautajs-fastify): remove unneded sort for routes
fix(bautajs-fastify-example): add multiple path example
fix(bautajs-express-example): add start documentation
fix(bautajs-fastify-example): add start documentation
fix(bautajs-express): test sortRoutes function
fix: remove unneded references to types in tsconfig files
