# packages/bautajs-fastify-example/server/resolvers/multiple-path-resolver.js
@@ -1,0 +1,32 @@
+const { pipe, step, resolver } = require('@axa/bautajs-core');
+const { getRequest } = require('@axa/bautajs-fastify');
+
+const transformResponse = step(response => {
+  return {
+    message: response
+  };
+});
+
+function generalStep(_prev, ctx) {
+  const req = getRequest(ctx);
+
+  const { key } = req.params;
+
+  return `This is the general text for requests and now we are receiving: ${key}`;
+}
+
+function specificStep() {
+  return 'This is a simple text for requests to the specific path';
+}
+
+module.exports = resolver(operations => {
+  operations.multiplePathGeneral
+    .validateRequest(false)
+    .validateResponse(false)
+    .setup(pipe(generalStep, transformResponse));
+
+  operations.multiplePathSpecific
+    .validateRequest(false)
+    .validateResponse(false)
+    .setup(pipe(specificStep, transformResponse));
+});
